Kelsey Development Sandbox/src/objects/DS_TSCC_TSCYC_B__c.object
<CustomObject>
    <fields>
        <fullName>BANG_R2__c</fullName>
        <description>Anger Scale Raw Score
9-36</description>
        <label>BANG_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANG_R__c</fullName>
        <description>Anger Scale Raw Score
9-36</description>
        <label>BANG_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANG_T2__c</fullName>
        <description>Anger Scale T Score
30-140</description>
        <label>BANG_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANG_T__c</fullName>
        <description>Anger Scale T Score
30-140</description>
        <label>BANG_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANX_R2__c</fullName>
        <description>Anxiety Scale Raw Score
9-36</description>
        <label>BANX_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANX_R__c</fullName>
        <description>Anxiety Scale Raw Score
9-36</description>
        <label>BANX_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANX_T2__c</fullName>
        <description>Anxiety Scale T Score
30-140</description>
        <label>BANX_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANX_T__c</fullName>
        <description>Anxiety Scale T Score
30-140</description>
        <label>BANX_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BATR_R2__c</fullName>
        <description>Hyperresponsive Scale Raw Score
9-36</description>
        <label>BATR_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BATR_R__c</fullName>
        <description>Hyperresponsive Scale Raw Score
9-36</description>
        <label>BATR_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BATR_T2__c</fullName>
        <description>Hyperresponsive Scale T Score
30-140</description>
        <label>BATR_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BATR_T__c</fullName>
        <description>Hyperresponsive Scale T Score
30-140</description>
        <label>BATR_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDEP_R2__c</fullName>
        <description>Depression Scale Raw Score
9-36</description>
        <label>BDEP_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDEP_R__c</fullName>
        <description>Depression Scale Raw Score
9-36</description>
        <label>BDEP_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDEP_T2__c</fullName>
        <description>Depression Scale T Score
30-140</description>
        <label>BDEP_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDEP_T__c</fullName>
        <description>Depression Scale T Score
30-140</description>
        <label>BDEP_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDIS_R2__c</fullName>
        <description>Dissociation Scale Raw Score
9-36</description>
        <label>BDIS_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDIS_R__c</fullName>
        <description>Dissociation Scale Raw Score
9-36</description>
        <label>BDIS_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDIS_T2__c</fullName>
        <description>Dissociation Scale T Score
30-140</description>
        <label>BDIS_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDIS_T__c</fullName>
        <description>Dissociation Scale T Score
30-140</description>
        <label>BDIS_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDOATSCC__c</fullName>
        <description>Briere/TSCC date of administration</description>
        <label>BDOATSCC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOATSCYC__c</fullName>
        <description>TSCYC date of administration</description>
        <label>BDOATSCYC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOV__c</fullName>
        <formula>Background_ID__r.BDOV__c</formula>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPTSAR_R2__c</fullName>
        <description>PTS Arousal Subscale Raw Score
9-36</description>
        <label>BPTSAR_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAR_R__c</fullName>
        <description>PTS Arousal Subscale Raw Score
9-36</description>
        <label>BPTSAR_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAR_T2__c</fullName>
        <description>PTS Arousal Subscale T Score
30-140</description>
        <label>BPTSAR_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAR_T__c</fullName>
        <description>PTS Arousal Subscale T Score
30-140</description>
        <label>BPTSAR_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAV_R2__c</fullName>
        <description>PTS Avoidance Subscale Raw Score
9-36</description>
        <label>BPTSAV_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAV_R__c</fullName>
        <description>PTS Avoidance Subscale Raw Score
9-36</description>
        <label>BPTSAV_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAV_T2__c</fullName>
        <description>PTS Avoidance Subscale T Score
30-140</description>
        <label>BPTSAV_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAV_T__c</fullName>
        <description>PTS Avoidance Subscale T Score
30-140</description>
        <label>BPTSAV_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSI_R2__c</fullName>
        <description>PTS Intrusion Subscale Raw Score
9-36</description>
        <label>BPTSI_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSI_R__c</fullName>
        <description>PTS Intrusion Subscale Raw Score
9-36</description>
        <label>BPTSI_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSI_T2__c</fullName>
        <description>PTS Intrusion Subscale T Score
30-140</description>
        <label>BPTSI_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSI_T__c</fullName>
        <description>PTS Intrusion Subscale T Score
30-140</description>
        <label>BPTSI_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSTOT_R2__c</fullName>
        <description>PTS Total Scale Raw Score 27-108</description>
        <label>BPTSTOT_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSTOT_R__c</fullName>
        <description>PTS Total Scale Raw Score 27-108</description>
        <label>BPTSTOT_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSTOT_T2__c</fullName>
        <description>PTS Total Scale T Score 30-140</description>
        <label>BPTSTOT_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSTOT_T__c</fullName>
        <description>PTS Total Scale T Score 30-140</description>
        <label>BPTSTOT_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL_R2__c</fullName>
        <description>Underresponsive Scale Raw Score
0-9</description>
        <label>BRL_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL_R__c</fullName>
        <description>Underresponsive Scale Raw Score
0-9</description>
        <label>BRL_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL_T2__c</fullName>
        <description>Underresponsive Scale T Score
30-140</description>
        <label>BRL_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL_T__c</fullName>
        <description>Underresponsive Scale T Score
30-140</description>
        <label>BRL_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSC_R2__c</fullName>
        <description>Sexual Concerns Scale Raw Score
9-36</description>
        <label>BSC_R2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSC_R__c</fullName>
        <description>Sexual Concerns Scale Raw Score
9-36</description>
        <label>BSC_R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSC_T2__c</fullName>
        <description>Sexual Concerns Scale T Score
30-140</description>
        <label>BSC_T2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSC_T__c</fullName>
        <description>Sexual Concerns Scale T Score
30-140</description>
        <label>BSC_T</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAGG2__c</fullName>
        <description>Briere: Anger - Num
Raw: 0-27</description>
        <label>BTSCAGG2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAGG__c</fullName>
        <description>Briere: Anger - Num
Raw: 0-27</description>
        <label>BTSCAGG</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAGTN2__c</fullName>
        <description>Briere: Anger T Score - Num
30-140</description>
        <label>BTSCAGTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAGTN__c</fullName>
        <description>Briere: Anger T Score - Num
30-140</description>
        <label>BTSCAGTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAXN2__c</fullName>
        <description>Briere: Anxiety - Num
Raw: 0-27</description>
        <label>BTSCAXN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAXN__c</fullName>
        <description>Briere: Anxiety - Num
Raw: 0-27</description>
        <label>BTSCAXN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAXTN2__c</fullName>
        <description>Briere: Anxiety T Score- Num
30-140</description>
        <label>BTSCAXTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCAXTN__c</fullName>
        <description>Briere: Anxiety T Score- Num
30-140</description>
        <label>BTSCAXTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDPN2__c</fullName>
        <description>Briere: Depression - Num
Raw: 0-27</description>
        <label>BTSCDPN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDPN__c</fullName>
        <description>Briere: Depression - Num
Raw: 0-27</description>
        <label>BTSCDPN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDPTN2__c</fullName>
        <description>Briere: Depression T Score - Num
30-140</description>
        <label>BTSCDPTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDPTN__c</fullName>
        <description>Briere: Depression T Score - Num
30-140</description>
        <label>BTSCDPTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDSN2__c</fullName>
        <description>Briere: Dissociation - Num Raw: 0-30</description>
        <label>BTSCDSN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDSN__c</fullName>
        <description>Briere: Dissociation - Num Raw: 0-30</description>
        <label>BTSCDSN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDSTN2__c</fullName>
        <description>Briere: Dissociation T Score- Num
30-140</description>
        <label>BTSCDSTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCDSTN__c</fullName>
        <description>Briere: Dissociation T Score- Num
30-140</description>
        <label>BTSCDSTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCFNN2__c</fullName>
        <description>Briere: Fantasy - Num Raw: 0-9</description>
        <label>BTSCFNN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCFNN__c</fullName>
        <description>Briere: Fantasy - Num Raw: 0-9</description>
        <label>BTSCFNN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCFNTN2__c</fullName>
        <description>Briere: Fantasy T Score- Num
30-140</description>
        <label>BTSCFNTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCFNTN__c</fullName>
        <description>Briere: Fantasy T Score- Num
30-140</description>
        <label>BTSCFNTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCHYN2__c</fullName>
        <description>Briere: Hyperresponsive - Num Raw: 0-8</description>
        <label>BTSCHYN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCHYN__c</fullName>
        <description>Briere: Hyperresponsive - Num Raw: 0-8</description>
        <label>BTSCHYN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCHYTN2__c</fullName>
        <description>Briere: Hyperresponsive Tscore - Num
30-140</description>
        <label>BTSCHYTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCHYTN__c</fullName>
        <description>Briere: Hyperresponsive Tscore - Num
30-140</description>
        <label>BTSCHYTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCNTN2__c</fullName>
        <description>Briere: Underresponsive T Score- Num
30-140</description>
        <label>BTSCNTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCNTN__c</fullName>
        <description>Briere: Underresponsive T Score- Num
30-140</description>
        <label>BTSCNTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCODN2__c</fullName>
        <description>Briere: Overt Dissociation - Num Raw: 0-21</description>
        <label>BTSCODN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCODN__c</fullName>
        <description>Briere: Overt Dissociation - Num Raw: 0-21</description>
        <label>BTSCODN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCODTN2__c</fullName>
        <description>Briere: Overt Dissociation T Score - Num
30-140</description>
        <label>BTSCODTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCODTN__c</fullName>
        <description>Briere: Overt Dissociation T Score - Num
30-140</description>
        <label>BTSCODTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCPTN2__c</fullName>
        <description>Briere: Post Traumatic Stress - Num Raw: 0-30</description>
        <label>BTSCPTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCPTN__c</fullName>
        <description>Briere: Post Traumatic Stress - Num Raw: 0-30</description>
        <label>BTSCPTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCPTTN2__c</fullName>
        <description>Briere: Post Traumatic Stress T Score - Num
30-140</description>
        <label>BTSCPTTN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCPTTN__c</fullName>
        <description>Briere: Post Traumatic Stress T Score - Num 30-140</description>
        <inlineHelpText>30-140</inlineHelpText>
        <label>BTSCPTTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCUNN2__c</fullName>
        <description>Briere: Underresponsive - Num Raw: 0-10</description>
        <label>BTSCUNN2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCUNN__c</fullName>
        <description>Briere: Underresponsive - Num Raw: 0-10</description>
        <label>BTSCUNN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTSCUNTN__c</fullName>
        <description>Briere: Underresponsive T Score- Num 30-140</description>
        <label>BTSCUNTN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_B__c</referenceTo>
        <relationshipLabel>DS TSCC TSCYC B</relationshipLabel>
        <relationshipName>DS_TSCC_TSCYC_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS TSCC TSCYC B</relationshipLabel>
        <relationshipName>DS_TSCC_TSCYC_B</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_TSCC_A__c</fullName>
        <label>STATUS TSCC A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TSCYC__c</fullName>
        <label>STATUS TSCYC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS TSCC TSCYC B</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Background_ID__c</columns>
        <columns>Client__c</columns>
        <columns>BDOV__c</columns>
        <columns>BDOATSCYC__c</columns>
        <columns>BDOATSCC__c</columns>
        <columns>SECTION__c</columns>
        <columns>STATUS_TSCYC__c</columns>
        <columns>STATUS_TSCC_A__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DS TSCC TSCYC B Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS TSCC TSCYC B</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TSCC_A_ANG_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCAGG__c  &lt;&gt;  BTSCAGG2__c</errorConditionFormula>
        <errorDisplayField>BTSCAGG2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anger Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANG_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
            (BTSCAGG__c&gt;=0)&amp;&amp;
            (BTSCAGG__c&lt;=27)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCAGG__c)
             )
            &amp;&amp;
            NOT(
            BTSCAGG__c = 999)</errorConditionFormula>
        <errorDisplayField>BTSCAGG__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Anger is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANG_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCAGTN__c  &lt;&gt;  BTSCAGTN2__c</errorConditionFormula>
        <errorDisplayField>BTSCAGTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anger T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANG_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            ( BTSCAGTN__c &gt;= 30) &amp;&amp;
            (BTSCAGTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCAGTN__c)
             )
            &amp;&amp;
            NOT(
            BTSCAGTN__c = 0)</errorConditionFormula>
        <errorDisplayField>BTSCAGTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Anger is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCAXN__c  &lt;&gt;  BTSCAXN2__c</errorConditionFormula>
        <errorDisplayField>BTSCAXN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anxiety Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCAXN__c&gt;=0)&amp;&amp;
            (BTSCAXN__c &lt;= 27)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCAXN__c)
             )
            &amp;&amp;
            NOT(
            BTSCAXN__c = 999)</errorConditionFormula>
        <errorDisplayField>BTSCAXN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Anxiety is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCAXTN__c  &lt;&gt;  BTSCAXTN2__c</errorConditionFormula>
        <errorDisplayField>BTSCAXTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Anxiety T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_ANX_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCAXTN__c&gt;=30)&amp;&amp;
            (BTSCAXTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCAXTN__c)
             )
            &amp;&amp;
            NOT(
            BTSCAXTN__c = 0)</errorConditionFormula>
        <errorDisplayField>BTSCAXTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Anxiety is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCDPN__c  &lt;&gt;  BTSCDPN2__c</errorConditionFormula>
        <errorDisplayField>BTSCDPN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Depression Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCDPN__c&gt;=0)&amp;&amp;
            (BTSCDPN__c &lt;= 27)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCDPN__c)
             )
            &amp;&amp;
            NOT(
            BTSCDPN__c = 999)</errorConditionFormula>
        <errorDisplayField>BTSCDPN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Depression is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCDPTN__c  &lt;&gt;  BTSCDPTN2__c</errorConditionFormula>
        <errorDisplayField>BTSCDPTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Depression T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DEP_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCDPTN__c&gt;=30)&amp;&amp;
            (BTSCDPTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCDPTN__c)
             )
            &amp;&amp;
            NOT(
            BTSCDPTN__c = 0)</errorConditionFormula>
        <errorDisplayField>BTSCDPTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Depression is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCFNN__c  &lt;&gt;  BTSCFNN2__c</errorConditionFormula>
        <errorDisplayField>BTSCFNN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Fantasy Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCFNN__c&gt;=0)&amp;&amp;
            (BTSCFNN__c &lt;= 9)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCFNN__c)
             )
            &amp;&amp;
            NOT(
            BTSCFNN__c = 999)</errorConditionFormula>
        <errorDisplayField>BTSCFNN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Fantasy is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCFNTN__c  &lt;&gt;  BTSCFNTN2__c</errorConditionFormula>
        <errorDisplayField>BTSCFNTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Fantasy T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_F_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCFNTN__c&gt;=30)&amp;&amp;
            (BTSCFNTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCFNTN__c)
             )
            &amp;&amp;
            NOT(
            BTSCFNTN__c = 0)</errorConditionFormula>
        <errorDisplayField>BTSCFNTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Fantasy is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCODN__c  &lt;&gt;  BTSCODN2__c</errorConditionFormula>
        <errorDisplayField>BTSCODN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Overt Dissociation Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCODN__c&gt;=0)&amp;&amp;
            (BTSCODN__c &lt;= 21)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCODN__c)
             )
            &amp;&amp;
            NOT(
            BTSCODN__c = 999)</errorConditionFormula>
        <errorDisplayField>BTSCODN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Overt Dissociation is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCODTN__c  &lt;&gt;  BTSCODTN2__c</errorConditionFormula>
        <errorDisplayField>BTSCODTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Overt Dissociation T-Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_O_T_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCODTN__c&gt;=30)&amp;&amp;
            (BTSCODTN__c &lt;= 140)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCODTN__c)
             )
            &amp;&amp;
            NOT(
            BTSCODTN__c = 0)</errorConditionFormula>
        <errorDisplayField>BTSCODTN__c</errorDisplayField>
        <errorMessage>The T-Score entered for Overt Dissociation is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCDSN__c  &lt;&gt;  BTSCDSN2__c</errorConditionFormula>
        <errorDisplayField>BTSCDSN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Dissociation Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
            (BTSCDSN__c&gt;=0)&amp;&amp;
            (BTSCDSN__c &lt;= 30)
            )
            &amp;&amp;
            NOT(
            ISNULL(BTSCDSN__c)
             )
            &amp;&amp;
            NOT(
            BTSCDSN__c = 999)</errorConditionFormula>
        <errorDisplayField>BTSCDSN__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Dissociation is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSCC_A_DIS_T_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>BTSCDSTN__c  &lt;&gt;  BTSCDSTN2__c</errorConditionFormula>
        <errorDisplayField>BTSCDSTN2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Dissociation T-Score</errorMessage>
    </validationRules>
</CustomObject>